--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -56,3 +56,47 @@ a{
         transition: $transition;
     }
 }
+
+// NAV
+
+nav{
+    background-color: $dark;
+
+    .container{
+      @include flex(space-between, center, row, wrap);
+      padding: 25px 0px;
+      @media(max-width:768px){
+        justify-content: center;
+    }
+        .logo{
+            color: $white;
+            font-size: 2rem;
+            font-weight: 700;
+            letter-spacing: 2px;
+            &:hover{
+                color: $primary;
+            }
+        }
+
+        ul{
+            @include flex(center, center, row, wrap);
+            
+            li{
+                padding: 0px 15px;
+                @media(max-width:768px){
+                    padding: 0px 10px;
+                }
+                
+                a{
+                    color: $white;
+                    font-size: 1rem;
+                    text-transform: uppercase;
+                    font-weight: 400;
+                    &:hover{
+                        color: $primary;
+                    }
+                }
+            }
+        }
+    } 
+}
