--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ nav {
         padding: 0px 15px; }
         @media (max-width: 768px) {
           nav .container ul li {
-            padding: 0px 10px; } }
+            padding: 0px 5px; } }
         nav .container ul li a {
           color: #ffffff;
           font-size: 1rem;
@@ -76,5 +76,54 @@ nav {
           font-weight: 400; }
           nav .container ul li a:hover {
             color: #f13a11; }
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/hero-bg.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 90vh; }
+  header hgroup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 80vh;
+    color: #ffffff;
+    text-align: center; }
+    header hgroup h4 {
+      font-size: 1.2rem;
+      color: #909090; }
+    header hgroup h1 {
+      font-size: 3rem;
+      padding: 10px 0px; }
+      @media (max-width: 768px) {
+        header hgroup h1 {
+          font-size: 2rem; } }
+    header hgroup .btn-area button:nth-child(1) {
+      background: #171819;
+      color: #ffffff;
+      border-radius: 3px;
+      font-size: 1rem;
+      padding: 15px 30px;
+      text-transform: uppercase;
+      border: none; }
+      header hgroup .btn-area button:nth-child(1):hover {
+        transition: 0.4 ease;
+        cursor: pointer;
+        color: #f13a11; }
+    header hgroup .btn-area button:nth-child(2) {
+      background: none;
+      color: #f13a11;
+      border-radius: 3px;
+      font-size: 1rem;
+      padding: 15px 30px;
+      text-transform: uppercase;
+      border: solid #f13a11; }
+      header hgroup .btn-area button:nth-child(2):hover {
+        transition: 0.4 ease;
+        cursor: pointer;
+        color: #ffffff; }
 
 /*# sourceMappingURL=style.css.map */
