--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -57,6 +57,8 @@ a{
     }
 }
 
+
+
 // NAV
 
 nav{
@@ -84,7 +86,7 @@ nav{
             li{
                 padding: 0px 15px;
                 @media(max-width:768px){
-                    padding: 0px 10px;
+                    padding: 0px 5px;
                 }
                 
                 a{
@@ -100,3 +102,61 @@ nav{
         }
     } 
 }
+
+
+// HEADER
+
+header{
+    background-image: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)), url(../img/hero-bg.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 90vh;
+
+    hgroup{
+        @include flex(center,center,column,nowrap);
+        height: 80vh;
+        color: $white;
+        text-align: center;
+
+        h4{
+            font-size: 1.2rem;
+            color: $gray;
+        }
+
+        h1{
+            font-size: 3rem;
+            padding: 10px 0px;
+
+            @media(max-width:768px){
+                font-size: 2rem;
+            }
+        }
+
+        .btn-area{
+            button{
+                &:nth-child(1){
+                    @include btn($dark,$white,3px,none);
+
+                    &:hover{
+                        transition: $transition;
+                        cursor: pointer;
+                        color: $primary;
+                    }
+                }
+
+                &:nth-child(2){
+                    @include btn(none,$primary,3px,solid $primary);
+
+                    &:hover{
+                        transition: $transition;
+                        cursor: pointer;
+                        color: $white;
+                    }
+                }
+            }
+        }
+
+    }
+}
+    
