--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -59,7 +59,7 @@ a{
 
 
 
-// NAV
+// NAV SECTION
 
 nav{
     background-color: $dark;
@@ -104,7 +104,7 @@ nav{
 }
 
 
-// HEADER
+// HEADER SECTION
 
 header{
     background-image: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)), url(../img/hero-bg.jpg);
@@ -161,7 +161,7 @@ header{
 }
     
 
-// ABOUT
+// ABOUT SECTION
 
 .about{
     background-color: $dark;
@@ -172,20 +172,24 @@ header{
         @include flex(space-between,center,row,wrap);
 
         article{
-            flex: 0 0 45%;
+            flex: 0 0 40%;
 
             h3{
                 font-size: 2rem;
                 margin-bottom: 10px;
             }
+            p{
+                color: $gray;
+            }
             h3+p{
-                color:$gray;
+                color:$white;
                 margin-bottom: 10px;
             }
 
             button{
                 @include btn($primary,$white,none,none);
                 margin-top: 20px;
+                border-radius: 5px;
 
                 &:hover{
                     transition: $transition;
@@ -196,11 +200,69 @@ header{
             }
 
             h4{
-                font-size: 1.5rem;
+                font-size: 1.2rem;
                 font-weight: 700;
                 margin-bottom: 10px;
             }
         }
     }
 
+}
+
+
+
+// GYM SECTION
+
+.gym{
+    background-color: $aboutBgColor;
+    padding: $padding;
+
+    .container{
+        @include flex (space-between,center,row,wrap);
+
+        article{
+            flex: 0 0 45%;
+
+            &:nth-child(1){
+                h2{
+                    font-size: 2rem;
+                    padding-bottom: 20px;
+                }
+
+                p{
+                    padding-bottom: 20px;
+                }
+            }
+
+            &:nth-child(2){
+                @include flex (space-between,center,row,wrap);
+
+                div{
+                    flex: 0 0 45%;
+                    text-align: center;
+                    box-shadow: 0 0 10px $dark;
+                    
+                    &:hover{
+                        transform: scale(1.2);
+                        transition-duration: 2s;
+                    }
+
+                    img{
+                        width: 100%;
+                        height: auto;
+                    }
+
+                    h3{
+                        font-size: 1.7rem;
+                        padding-bottom: 15px;
+                    }
+
+                    p{
+                        padding-bottom: 15px;
+                    }
+
+                }
+            }
+        }
+    }
 }
