--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -174,6 +174,11 @@ header{
         article{
             flex: 0 0 40%;
 
+            @media(max-width:768px){
+                flex: 0 0 100%;
+                margin-bottom: 20px;
+            }
+
             h3{
                 font-size: 2rem;
                 margin-bottom: 10px;
@@ -223,6 +228,11 @@ header{
         article{
             flex: 0 0 45%;
 
+            @media(max-width:768px){
+                flex: 0 0 100%;
+                text-align: center;
+            }
+
             &:nth-child(1){
                 h2{
                     font-size: 2rem;
@@ -241,10 +251,20 @@ header{
                     flex: 0 0 45%;
                     text-align: center;
                     box-shadow: 0 0 10px $dark;
+
+                    @media(max-width:768px){
+                        flex: 0 0 100%;
+                        margin-bottom: 20px;
+                    }
                     
                     &:hover{
                         transform: scale(1.2);
                         transition-duration: 2s;
+
+                        @media(max-width:768px){
+                            transform: scale(0.9);
+                            transition-duration: 2s;
+                        }
                     }
 
                     img{
@@ -266,3 +286,73 @@ header{
         }
     }
 }
+
+
+
+// CLASSES SECTION
+
+.classes{
+    padding: $padding;
+
+    hgroup{
+        text-align: center;
+        margin-bottom: 40px;
+        font-size: 1.7rem;
+
+        span{
+            color: $gray;
+        }
+    }
+
+    .row{
+        @include flex(space-between,center,row,wrap);
+
+
+        article{
+            flex: 0 0 30%;
+            text-align: center;
+            box-shadow: 0 0 10px $dark;
+
+            @media(max-width:768px){
+                flex: 0 0 100%;
+                margin-bottom: 20px;
+            }
+
+            &:hover{
+                transform: scale(1.1);
+                transition-duration: 2s;
+
+                @media(max-width:768px){
+                    transform: scale(0.9);
+                    transition-duration: 2s;
+                }
+            }
+
+            img{
+                width: 100%;
+                height: auto;
+            }
+
+            h3{
+                font-size: 2rem;
+                padding-bottom: 20px;
+            }
+
+            p{
+                padding-bottom: 20px;
+            }
+
+            button{
+                @include btn($primary,$white,25px 0px 25px 0px,none);
+                margin-bottom: 20px;
+
+                &:hover{
+                    transition: $transition;
+                    cursor: pointer;
+                    border-radius: 0px 25px 0px 25px;
+                }
+            }
+        }
+    }
+}
+
