--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,10 @@ header {
       flex: 0 0 43%;
       height: 500px;
       text-align: center; }
+      @media (max-width: 768px) {
+        .contact .container article {
+          flex: 0 0 100%;
+          margin-bottom: 20px; } }
       .contact .container article h3 {
         font-size: 2rem;
         margin-bottom: 20px; }
@@ -322,5 +326,23 @@ header {
       .contact .container article:nth-child(2) iframe {
         height: 70%;
         width: 100%; }
+
+footer {
+  padding: 50px 0px;
+  border-top: 1px solid #909090; }
+  footer .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap; }
+    @media (max-width: 768px) {
+      footer .container article {
+        margin-bottom: 20px;
+        text-align: center; } }
+    footer .container article a {
+      margin-left: 20px; }
+    footer .container article i {
+      color: #f13a11; }
 
 /*# sourceMappingURL=style.css.map */
