--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,3 @@
-
 /*---------------------------------
     GOOGLE FONTS
 -----------------------------------*/
@@ -18,41 +17,47 @@
     DEFAULT STYLES
 -----------------------------------*/
 
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
 }
 
-body{
+body {
     font-family: $text;
     line-height: 1.5;
     font-size: $fontSize;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: $headings;
 }
 
-.container{
+.container {
     width: 90%;
     margin: auto;
 }
 
-.container1{
+.container1 {
     width: 80%;
     margin: auto;
 }
 
-ul{
+ul {
     list-style-type: none;
 }
 
-a{
+a {
     text-decoration: none;
     color: $link;
 
-    &:hover{
+    &:hover {
         transition: $transition;
     }
 }
@@ -61,94 +66,99 @@ a{
 
 // NAV SECTION
 
-nav{
+nav {
     background-color: $dark;
 
-    .container{
-      @include flex(space-between, center, row, wrap);
-      padding: 25px 0px;
-      @media(max-width:768px){
-        justify-content: center;
-    }
-        .logo{
+    .container {
+        @include flex(space-between, center, row, wrap);
+        padding: 25px 0px;
+
+        @media(max-width:768px) {
+            justify-content: center;
+        }
+
+        .logo {
             color: $white;
             font-size: 2rem;
             font-weight: 700;
             letter-spacing: 2px;
-            &:hover{
+
+            &:hover {
                 color: $primary;
             }
         }
 
-        ul{
+        ul {
             @include flex(center, center, row, wrap);
-            
-            li{
+
+            li {
                 padding: 0px 15px;
-                @media(max-width:768px){
+
+                @media(max-width:768px) {
                     padding: 0px 5px;
                 }
-                
-                a{
+
+                a {
                     color: $white;
                     font-size: 1rem;
                     text-transform: uppercase;
                     font-weight: 400;
-                    &:hover{
+
+                    &:hover {
                         color: $primary;
                     }
                 }
             }
         }
-    } 
+    }
 }
 
 
 // HEADER SECTION
 
-header{
-    background-image: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)), url(../img/hero-bg.jpg);
+header {
+    background-image: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/hero-bg.jpg);
     background-position: center;
     background-size: cover;
     width: 100%;
     height: 90vh;
 
-    hgroup{
-        @include flex(center,center,column,nowrap);
+    hgroup {
+        @include flex(center, center, column, nowrap);
         height: 80vh;
         color: $white;
         text-align: center;
 
-        h4{
+        h4 {
             font-size: 1.2rem;
             color: $gray;
         }
 
-        h1{
+        h1 {
             font-size: 3rem;
             padding: 10px 0px;
 
-            @media(max-width:768px){
+            @media(max-width:768px) {
                 font-size: 2rem;
             }
         }
 
-        .btn-area{
-            button{
-                &:nth-child(1){
-                    @include btn($dark,$white,3px,none);
+        .btn-area {
+            button {
+                &:nth-child(1) {
+                    @include btn($dark, $white, 3px, none);
 
-                    &:hover{
+                    &:hover {
                         transition: $transition;
                         cursor: pointer;
                         color: $primary;
                     }
                 }
 
-                &:nth-child(2){
-                    @include btn(none,$primary,3px,solid $primary);
+                &:nth-child(2) {
+                    @include btn(none, $primary, 3px, solid $primary);
 
-                    &:hover{
+                    &:hover {
                         transition: $transition;
                         cursor: pointer;
                         color: $white;
@@ -159,44 +169,46 @@ header{
 
     }
 }
-    
+
 
 // ABOUT SECTION
 
-.about{
+.about {
     background-color: $dark;
     color: $white;
     padding: $padding;
-    
-    .container1{
-        @include flex(space-between,center,row,wrap);
 
-        article{
+    .container1 {
+        @include flex(space-between, center, row, wrap);
+
+        article {
             flex: 0 0 40%;
 
-            @media(max-width:768px){
+            @media(max-width:768px) {
                 flex: 0 0 100%;
                 margin-bottom: 20px;
             }
 
-            h3{
+            h3 {
                 font-size: 2rem;
                 margin-bottom: 10px;
             }
-            p{
+
+            p {
                 color: $gray;
             }
-            h3+p{
-                color:$white;
+
+            h3+p {
+                color: $white;
                 margin-bottom: 10px;
             }
 
-            button{
-                @include btn($primary,$white,none,none);
+            button {
+                @include btn($primary, $white, none, none);
                 margin-top: 20px;
                 border-radius: 5px;
 
-                &:hover{
+                &:hover {
                     transition: $transition;
                     cursor: pointer;
                     color: $primary;
@@ -204,7 +216,7 @@ header{
                 }
             }
 
-            h4{
+            h4 {
                 font-size: 1.2rem;
                 font-weight: 700;
                 margin-bottom: 10px;
@@ -218,66 +230,66 @@ header{
 
 // GYM SECTION
 
-.gym{
+.gym {
     background-color: $aboutBgColor;
     padding: $padding;
 
-    .container{
-        @include flex (space-between,center,row,wrap);
+    .container {
+        @include flex (space-between, center, row, wrap);
 
-        article{
+        article {
             flex: 0 0 45%;
 
-            @media(max-width:768px){
+            @media(max-width:768px) {
                 flex: 0 0 100%;
                 text-align: center;
             }
 
-            &:nth-child(1){
-                h2{
+            &:nth-child(1) {
+                h2 {
                     font-size: 2rem;
                     padding-bottom: 20px;
                 }
 
-                p{
+                p {
                     padding-bottom: 20px;
                 }
             }
 
-            &:nth-child(2){
-                @include flex (space-between,center,row,wrap);
+            &:nth-child(2) {
+                @include flex (space-between, center, row, wrap);
 
-                div{
+                div {
                     flex: 0 0 45%;
                     text-align: center;
                     box-shadow: 0 0 10px $dark;
 
-                    @media(max-width:768px){
+                    @media(max-width:768px) {
                         flex: 0 0 100%;
                         margin-bottom: 20px;
                     }
-                    
-                    &:hover{
+
+                    &:hover {
                         transform: scale(1.2);
                         transition-duration: 2s;
 
-                        @media(max-width:768px){
+                        @media(max-width:768px) {
                             transform: scale(0.9);
                             transition-duration: 2s;
                         }
                     }
 
-                    img{
+                    img {
                         width: 100%;
                         height: auto;
                     }
 
-                    h3{
+                    h3 {
                         font-size: 1.7rem;
                         padding-bottom: 15px;
                     }
 
-                    p{
+                    p {
                         padding-bottom: 15px;
                     }
 
@@ -291,62 +303,62 @@ header{
 
 // CLASSES SECTION
 
-.classes{
+.classes {
     padding: $padding;
 
-    hgroup{
+    hgroup {
         text-align: center;
         margin-bottom: 40px;
         font-size: 1.7rem;
 
-        span{
+        span {
             color: $gray;
         }
     }
 
-    .row{
-        @include flex(space-between,center,row,wrap);
+    .row {
+        @include flex(space-between, center, row, wrap);
 
 
-        article{
+        article {
             flex: 0 0 30%;
             text-align: center;
             box-shadow: 0 0 10px $dark;
 
-            @media(max-width:768px){
+            @media(max-width:768px) {
                 flex: 0 0 100%;
                 margin-bottom: 20px;
             }
 
-            &:hover{
+            &:hover {
                 transform: scale(1.1);
                 transition-duration: 2s;
 
-                @media(max-width:768px){
+                @media(max-width:768px) {
                     transform: scale(0.9);
                     transition-duration: 2s;
                 }
             }
 
-            img{
+            img {
                 width: 100%;
                 height: auto;
             }
 
-            h3{
+            h3 {
                 font-size: 2rem;
                 padding: 20px;
             }
 
-            p{
-                padding: 0px 20px 20px 20px ;
+            p {
+                padding: 0px 20px 20px 20px;
             }
 
-            button{
-                @include btn($primary,$white,25px 0px 25px 0px,none);
+            button {
+                @include btn($primary, $white, 25px 0px 25px 0px, none);
                 margin-bottom: 20px;
 
-                &:hover{
+                &:hover {
                     transition: $transition;
                     cursor: pointer;
                     border-radius: 0px 25px 0px 25px;
@@ -359,54 +371,54 @@ header{
 
 // CONTACT SECTION
 
-.contact{
+.contact {
     padding: $padding;
     background-color: $aboutBgColor;
-    
-    .container{
-        
-        @include flex(space-between,center,row,wrap);
 
-        article{
+    .container {
+
+        @include flex(space-between, center, row, wrap);
+
+        article {
             flex: 0 0 43%;
             height: 500px;
             text-align: center;
 
-            @media(max-width:768px){
+            @media(max-width:768px) {
                 flex: 0 0 100%;
                 margin-bottom: 20px;
             }
 
-            h3{
+            h3 {
                 font-size: 2rem;
                 margin-bottom: 20px;
             }
 
-            &:nth-child(1){
-                form{
-                    @include flex(space-between,flex-start,column,wrap);
-                    
-                    input{
-                        padding:10px;
+            &:nth-child(1) {
+                form {
+                    @include flex(space-between, flex-start, column, wrap);
+
+                    input {
+                        padding: 10px;
                         width: 100%;
                         margin-bottom: 20px;
                         font-size: 1rem;
                     }
 
-                    textarea{
-                        padding:10px;
+                    textarea {
+                        padding: 10px;
                         font-size: 1rem;
                         width: 100%;
                         margin-bottom: 20px;
                     }
                 }
 
-                button{
-                    @include btn($dark,$white,2px,none);
+                button {
+                    @include btn($dark, $white, 2px, none);
                     width: 100%;
                     text-transform: capitalize;
 
-                    &:hover{
+                    &:hover {
                         transition: $transition;
                         cursor: pointer;
                         background-color: $primary;
@@ -414,13 +426,13 @@ header{
                 }
             }
 
-            &:nth-child(2){
+            &:nth-child(2) {
 
-                p{
-                    margin-bottom:20px;
+                p {
+                    margin-bottom: 20px;
                 }
 
-                iframe{
+                iframe {
                     height: 70%;
                     width: 100%;
                 }
@@ -433,27 +445,32 @@ header{
 
 // FOOTER SECTION
 
-footer{
+footer {
     padding: $padding;
-    border-top:1px solid $gray;
-    
+    border-top: 1px solid $gray;
+    background-color: $link;
 
-    .container{
-        @include flex(space-around,center,row,wrap);
+    .container {
+        @include flex(space-around, center, row, wrap);
 
 
-        article{
+        article {
 
-            @media(max-width:768px){
-               margin-bottom: 20px;
-               text-align: center;
+            @media(max-width:768px) {
+                margin-bottom: 20px;
+                text-align: center;
             }
 
-            a{
+            P {
+                color: $white;
+            }
+
+            a {
                 margin-left: 20px;
+                color: $white;
             }
 
-            i{
+            i {
                 color: $primary;
             }
 
